# GAOLIB

./: README.md  __init__.py  pyproject.toml
.github/workflows/: main.yml
coretools/: uiloader.py
gaolib/: createposewidget.py  gaolibinfowidget.py  gaolibsub.py
gaolib/icons/: __init__.py
gaolib/model/: blenderutils.py  gaolibitem.py  gaoliblistmodel.py  gaolibtreeitem.py  gaolibtreeitemmodel.py  gifgenerator.py  rootitemwidget.py  treeitemfilterproxymodel.py
gaolib/ui/: createposewidget.ui  createposewidgetui.py  gaolib.ui  infowidget.ui  infowidgetui.py  itemwidget.ui  newfolderdialog.ui  newfolderdialogui.py  settingsdialog.ui  settingsdialogui.py  yesnodialog.ui  yesnodialogui.py
