[tool.poetry]
name = "gaolib"
version = "1.0.0"
description = "Animation and Pose library tool for Blender."
authors = ["Anne Beurard <anneb@GAOSHANPICTURES.INTRA>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
PySide2 = "^5.15.2"
imageio = "^2.19.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
