[tool.poetry]
name = "gaolib"
version = "1.0.0"
description = "Animation and Pose library tool for Blender."
authors = ["Anne Beurard <anneb@GAOSHANPICTURES.INTRA>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
PySide2 = "^5.15.2"
imageio = "^2.19.3"

[tool.poetry.dev-dependencies]
flake8-isort = "^4.1.1"
flake8-black = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
